refactor: update fetcher and fetch result identifiers
