# src/middlewares/fetchResult.validator.ts
@@ -1,17 +1,32 @@
 import { type Request, type Response, type NextFunction } from 'express';
-import { NotFoundError, DuplicateKeyError } from '../utils/customErrors.js';
+import { NotFoundError, ValidationError } from '../utils/customErrors.js';
+import mongoose from 'mongoose';
+import { sendSuccess } from '../utils/standardResponse.js';
 import * as fetchResultService from '../services/fetchResult.service.js';
 
 // ─── Custom validators ─────────────────────────────
 export const validateFetchResultId = async (req: Request, res: Response, next: NextFunction) => {
+    if (!mongoose.Types.ObjectId.isValid(req.params.fetchResultId)) {
+        return next(new ValidationError('Invalid mongo id', { id: req.params.fetchResultId }));
+    }
+    next();
+};
+
+export const validateExistingFetchResult = async (
+    req: Request,
+    res: Response,
+    next: NextFunction,
+) => {
     try {
-        const { id, fetcherName } = req.params;
-        const fetchResult = await fetchResultService.getFetchResultByFetcherNameAndId(
-            fetcherName,
-            id,
+        const { fetchResultId, fetcherId } = req.params;
+        const fetchResult = await fetchResultService.getFetchResultByFetcherIdAndFetchResultId(
+            fetcherId,
+            fetchResultId,
         );
         if (!fetchResult) {
-            return next(new NotFoundError(`Fetch result ${id} not found for ${fetcherName}`));
+            return next(
+                new NotFoundError(`Fetch result ${fetchResultId} not found for ${fetcherId}`),
+            );
         }
         next();
     } catch (err) {
@@ -25,19 +40,23 @@ export const validateExistingFetchResultBeforeGeneration = async (
     next: NextFunction,
 ) => {
     try {
-        const { fetcherName } = req.params;
+        const { fetcherId } = req.params;
         const { date, fetcherConfig } = req.body;
-        const existingFetchResult = await fetchResultService.getFetchResultsByFetchResultBody(
-            fetcherName,
-            new Date(date),
-            fetcherConfig,
-        );
-        if (existingFetchResult.length > 0) {
-            return next(
-                new DuplicateKeyError(
-                    `A fetch result already exists for fetcher '${fetcherName}' with the id '${existingFetchResult[0]._id}' and current status '${existingFetchResult[0].status}' for the provided fetch date and fetcher configuration`,
-                ),
+        const existingFetchResult =
+            await fetchResultService.getFetchResultsByFetcherIdAndFetchResultBody(
+                fetcherId,
+                date,
+                fetcherConfig,
             );
+
+        if (existingFetchResult.length > 0) {
+            return sendSuccess(res, {
+                data: existingFetchResult[0],
+                message:
+                    'A fetch result already exists for the provided fetcherId, fetch date and fetcher configuration. Returning existing result',
+                httpStatus: 200,
+                appCode: 'DUPLICATE_KEY',
+            });
         }
         next();
     } catch (err) {
